--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "get_timeout",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "description": "simple nodejs server that get the timeout for the server response",
   "main": "app.js",
   "scripts": {
@@ -21,6 +21,6 @@
   },
   "homepage": "https://github.com/El-chapo0133/get_timeout#readme",
   "devDependencies": {
-    "express": "^4.17.1"
+    "express": "4.17.1"
   }
 }
